--- a/package.json
+++ b/package.json
@@ -39,5 +39,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@cypress/react": "^5.3.2",
+    "@cypress/webpack-dev-server": "^1.1.1",
+    "cypress": "^7.0.0"
   }
 }
